<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WSFarmacia_mbl</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="entra_admin">Administrador</string>
    <string name="entra_farm">Farmacèutic</string>
    <string name="lab_tria_usuari">Usuari:</string>
    <string name="str_noticies">Noticies</string>
    <string name="str_medicaments">Medicaments</string>
    <string name="popup_menu_noticies">Notícies</string>
    <string name="popup_menu_farmacies">Farmàcies</string>
    <string name="popup_menu_medicaments">Medicaments</string>
    <string name="popup_menu_entrades">Entrades</string>
    <string name="popup_menu_sortides">Sortides</string>
    <string name="str_farmacies">Farmàcies</string>
    <string name="visualitzacio_medicament_descripcio">Descripció</string>
    <string name="visualitzacio_medicament_categoria">Categoria</string>
    <string name="errorconnexio_desc">Impossible connectar-se al servidor</string>
    <string name="errorconnexio_titol">Error de connexió</string>
    <string name="str_entrades">Entrada</string>
    <string name="visualitzacio_entrada_dataihora">Data i hora</string>
    <string name="visualitzacio_entrada_medicament">Medicament</string>
    <string name="visualitzacio_entrada_quantitat">Quantitat</string>
    <string name="str_sortides">Sortida</string>
    <string name="visualitzacio_sortida_farmacia">Farmàcia</string>
    
    <string name="introip_msg">Introdueix la IP o hostname del servidor</string>
    
    <string name="introip_titol">Configuració</string>

</resources>
