<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.wsfarmacia_mbl.MainActivity" >

    <Button
        android:id="@+id/activity_main_entra_farm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/activity_main_entra_admin"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/activity_main_entra_admin"
        android:layout_marginBottom="44dp"
        android:text="@string/entra_farm" />

    <Button
        android:id="@+id/activity_main_entra_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/activity_main_entra_farm"
        android:layout_centerHorizontal="true"
        android:text="@string/entra_admin" />

    <TextView
        android:id="@+id/activity_main_textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/activity_main_entra_admin"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="43dp"
        android:text="@string/lab_tria_usuari"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
